[gd_scene load_steps=3 format=2]

[ext_resource path="res://lobby.gd" type="Script" id=1]
[ext_resource path="res://Theme.tres" type="Theme" id=2]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Players" type="Panel" parent="."]
margin_left = 393.0
margin_top = 113.0
margin_right = 1036.0
margin_bottom = 701.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="lobby_label" type="Label" parent="Players"]
margin_left = 26.0
margin_top = 18.0
margin_right = 318.0
margin_bottom = 51.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Lobby:"

[node name="lobby" type="LineEdit" parent="Players"]
margin_left = 143.568
margin_top = 12.0
margin_right = 291.568
margin_bottom = 55.0
size_flags_horizontal = 2
size_flags_vertical = 0
editable = false

[node name="label" type="Label" parent="Players"]
margin_left = 39.773
margin_top = 87.6758
margin_right = 291.773
margin_bottom = 120.676
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Awaiting Players..."

[node name="start" type="Button" parent="Players"]
margin_left = 265.56
margin_top = 398.942
margin_right = 390.56
margin_bottom = 437.942
size_flags_horizontal = 2
size_flags_vertical = 2
text = "START!"

[node name="list" type="ItemList" parent="Players"]
margin_left = 109.0
margin_top = 148.0
margin_right = 509.0
margin_bottom = 384.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Connect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="VBoxContainer" parent="Connect/CenterContainer"]
margin_left = 760.0
margin_top = 436.0
margin_right = 1160.0
margin_bottom = 643.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="NameLabel" type="Label" parent="Connect/CenterContainer/V"]
margin_right = 400.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameInput" type="LineEdit" parent="Connect/CenterContainer/V"]
margin_top = 37.0
margin_right = 400.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "The Warrior"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="Connect/CenterContainer/V"]
margin_top = 84.0
margin_right = 400.0
margin_bottom = 123.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H" type="HBoxContainer" parent="Connect/CenterContainer/V"]
margin_top = 127.0
margin_right = 400.0
margin_bottom = 170.0

[node name="LobbyCode" type="LineEdit" parent="Connect/CenterContainer/V/H"]
margin_right = 198.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Lobby code"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="Connect/CenterContainer/V/H"]
margin_left = 202.0
margin_right = 400.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorLabel" type="Label" parent="Connect/CenterContainer/V"]
margin_top = 174.0
margin_right = 400.0
margin_bottom = 207.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.819608, 0.290196, 0.290196, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 55.0
margin_bottom = 58.0
size_flags_horizontal = 2
size_flags_vertical = 2
[connection signal="pressed" from="Players/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Connect/CenterContainer/V/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Connect/CenterContainer/V/H/Join" to="." method="_on_join_pressed"]
